문제 1
문제 1
The function will be run again next time.  To prevent this, execute:
  touch ~/.zshrc
c3r1s2% python
Python 3.10.12 (main, May 27 2025, 17:12:29) [GCC 11.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> pip
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pip' is not defined. Did you mean: 'zip'?
>>> pip instakk flask
  File "<stdin>", line 1
    pip instakk flask
        ^^^^^^^
SyntaxError: invalid syntax
>>> python
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'python' is not defined
>>> print("Hello")
Hello
>>> def hello():
...     return "Hello"
... 
